--- a/version-support1_8/build.gradle
+++ b/version-support1_8/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 plugins {
     id 'id.luckynetwork.lyrams.lyralibs.java-conventions'
 }
@@ -7,9 +5,6 @@ plugins {
 configurations {
     extraLibs
 }
-
-def pluginName = 'LyraLibs-VersionSupport'
-def code = 0
 
 dependencies {
     implementation project(":version-support")
@@ -26,32 +21,12 @@ dependencies {
     configurations.compileOnly.extendsFrom(configurations.extraLibs)
 }
 
-task updateBuildNumber {
-    def versionPropsFile = file 'version.properties'
-    Properties versionProps = new Properties()
-    versionProps.load(new FileInputStream(versionPropsFile))
-
-    code = versionProps['VERSION_CODE'].toInteger() + 1
-
-    versionProps['VERSION_CODE'] = code.toString()
-    versionProps.store(versionPropsFile.newWriter(), null)
-}
-
 jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
-    archiveFileName = "LyraLibs-VS1_8 b" + code.toString() + ".jar"
+    archiveFileName = "LyraLibs-VS1_8.jar"
 
     from {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
     }
-}
-
-processResources {
-    filter ReplaceTokens, tokens: [
-            "version"  : project.version.toString(),
-            "mainClass": project.group + ".$pluginName",
-            "name"     : pluginName,
-            "number"   : code.toString()
-    ]
 }
