--- a/buildSrc/src/main/groovy/id.luckynetwork.lyrams.lyralibs.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/id.luckynetwork.lyrams.lyralibs.java-conventions.gradle
@@ -47,6 +47,8 @@ dependencies {
     compileOnly 'org.bspfsystems:yamlconfiguration:1.0.11'
     // apache commons
     compileOnly 'org.apache.commons:commons-lang3:3.12.0'
+    // novena injector
+    compileOnly files("../aLibs/NovenaInjector.jar")
 
     configurations.compileOnly.extendsFrom(configurations.extraLibs)
 }
