--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -16,7 +16,7 @@ def pluginName = 'LyraLibs-Velocity'
 def code = 0
 
 dependencies {
-    otherProjects project(":core")
+    compileOnly project(":core")
 
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'com.velocitypowered:velocity-api:3.0.1'
