--- a/.github/workflows/Java-CI.yml
+++ b/.github/workflows/Java-CI.yml
@@ -9,28 +9,31 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
-      - name: BuildTools
-        run: |
-          mkdir spigot
-          cd spigot
-          wget -O BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-          java -jar BuildTools.jar --rev 1.8.8
-          java -jar BuildTools.jar --rev 1.12.2
-          java -jar BuildTools.jar --rev 1.13.2
-          java -jar BuildTools.jar --rev 1.16.5
+          distribution: 'temurin'
+          java-version: '8'
+          cache: 'gradle'
+      - name: Cache Dependencies
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/settings.gradle') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Setup BuildTools (1.8.8 - 1.16.5)
+        uses: SpraxDev/Action-SpigotMC@v4.0.0
+        with:
+          versions: 1.8.8, 1.12.2, 1.13.2, 1.16.5
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Clean artifacts with Gradle
-        run: ./gradlew clean
       - name: Build with Gradle
         run: ./gradlew core:build version-support:build version-support1_8:build version-support1_13:build version-support1_16:build build
       - uses: actions/upload-artifact@v2
         with:
           name: LyraLibs
           path: |
+            core/build/libs/
             bukkit/build/libs/
             velocity/build/libs/
