Java 8 compatibility (lmao)

--- a/buildSrc/src/main/groovy/id.luckynetwork.lyrams.lyralibs.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/id.luckynetwork.lyrams.lyralibs.java-conventions.gradle
@@ -55,6 +55,7 @@ dependencies {
 
 group 'id.luckynetwork.lyrams.lyralibs'
 version '1.0.0'
+java.sourceCompatibility = JavaVersion.VERSION_1_8
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
