--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -52,8 +52,7 @@ task updateBuildNumber {
 
 jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-    archiveFileName = "LyraLibs-Velocity b" + code.toString() + ".jar"
+    archiveFileName = "normal/LyraLibs-Velocity b" + code.toString() + ".jar"
 
     from {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
@@ -67,7 +66,7 @@ task jarLight(type: Jar) {
     from sourceSets.main.output
 
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveFileName = "LyraLibs-Velocity-Light b" + code.toString() + ".jar"
+    archiveFileName = "light/LyraLibs-Velocity-Light b" + code.toString() + ".jar"
 
     from {
         configurations.otherProjects.collect { it.isDirectory() ? it : zipTree(it) }
