--- a/.github/workflows/Java-CI.yml
+++ b/.github/workflows/Java-CI.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew core:build version-support:build version-support1_8:build version-support1_12:build version-support1_13:build version-support1_16:build build
       - name: Publish with Gradle
-        run: ./gradle publish
+        run: ./gradlew publish
       - uses: actions/upload-artifact@v2
         with:
           name: LyraLibs
