--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -53,6 +53,8 @@ task updateBuildNumber {
 
     code = versionProps['VERSION_CODE'].toInteger() + 1
 
+    project.version = "b" + code.toString()
+
     versionProps['VERSION_CODE'] = code.toString()
     versionProps.store(versionPropsFile.newWriter(), null)
 }
