--- a/.github/workflows/Java-CI.yml
+++ b/.github/workflows/Java-CI.yml
@@ -39,19 +39,19 @@ jobs:
             velocity/build/libs/
 
       - name: Delete Package Versions
-        uses: actions/delete-package-versions@v2.0.
+        uses: actions/delete-package-versions@v2.0.1
         with:
           token: ${{ github.TOKEN }}
           package-name: 'id.luckynetwork.lyrams.lyralibs.core'
           min-versions-to-keep: 5
       - name: Delete Package Versions
-        uses: actions/delete-package-versions@v2.0.
+        uses: actions/delete-package-versions@v2.0.1
         with:
           token: ${{ github.TOKEN }}
           package-name: 'id.luckynetwork.lyrams.lyralibs.bukkit'
           min-versions-to-keep: 5
       - name: Delete Package Versions
-        uses: actions/delete-package-versions@v2.0.
+        uses: actions/delete-package-versions@v2.0.1
         with:
           token: ${{ github.TOKEN }}
           package-name: 'id.luckynetwork.lyrams.lyralibs.velocity'
