--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -97,8 +97,8 @@ publishing {
             name = "LyraLibs-Core"
             url = uri("https://maven.pkg.github.com/BadAccuracyID/LyraLibs")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
