--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
-allprojects {
-    version = "1.0"
-    group = 'id.luckynetwork.lyrams.lyralibs'
-}
-
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
 
-    sourceCompatibility = 1.8
-
     publishing {
+        repositories {
+            maven {
+                name = "LyraLibs"
+                url = uri("https://maven.pkg.github.com/BadAccuracyID/LyraLibs")
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+                    password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+                }
+            }
+        }
         publications {
-            maven(MavenPublication) {
-                groupId project.group
-                artifactId project.name
-                version project.version
-                from components.java
+            gpr(MavenPublication) {
+                from(components.java)
             }
         }
     }
