--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -87,4 +87,22 @@ processResources {
     ]
 }
 
+publishing {
+    repositories {
+        maven {
+            name = "LyraLibs-Velocity"
+            url = uri("https://maven.pkg.github.com/BadAccuracyID/LyraLibs")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
+
 assemble.dependsOn(jarHeavy)
