--- a/.github/workflows/Java-CI.yml
+++ b/.github/workflows/Java-CI.yml
@@ -33,29 +33,29 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew core:build version-support:build version-support1_8:build version-support1_12:build version-support1_13:build version-support1_16:build build
 
-      - name: Delete Package Versions
-        uses: actions/delete-package-versions@v2.0.1
-        with:
-          token: ${{ github.TOKEN }}
-          package-name: 'id.luckynetwork.lyrams.lyralibs.core'
-          min-versions-to-keep: 5
-      - name: Delete Package Versions
-        uses: actions/delete-package-versions@v2.0.1
-        with:
-          token: ${{ github.TOKEN }}
-          package-name: 'id.luckynetwork.lyrams.lyralibs.bukkit'
-          min-versions-to-keep: 5
-      - name: Delete Package Versions
-        uses: actions/delete-package-versions@v2.0.1
-        with:
-          token: ${{ github.TOKEN }}
-          package-name: 'id.luckynetwork.lyrams.lyralibs.velocity'
-          min-versions-to-keep: 5
-
-      - name: Gradle Build Action
-        uses: gradle/gradle-build-action@v2.2.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          GITHUB_USERNAME: ${{ secrets.USERNAME }}
-        with:
-          arguments: publish
+#      - name: Delete Package Versions
+#        uses: actions/delete-package-versions@v2.0.1
+#        with:
+#          token: ${{ github.TOKEN }}
+#          package-name: 'id.luckynetwork.lyrams.lyralibs.core'
+#          min-versions-to-keep: 5
+#      - name: Delete Package Versions
+#        uses: actions/delete-package-versions@v2.0.1
+#        with:
+#          token: ${{ github.TOKEN }}
+#          package-name: 'id.luckynetwork.lyrams.lyralibs.bukkit'
+#          min-versions-to-keep: 5
+#      - name: Delete Package Versions
+#        uses: actions/delete-package-versions@v2.0.1
+#        with:
+#          token: ${{ github.TOKEN }}
+#          package-name: 'id.luckynetwork.lyrams.lyralibs.velocity'
+#          min-versions-to-keep: 5
+#
+#      - name: Gradle Build Action
+#        uses: gradle/gradle-build-action@v2.2.2
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+#          GITHUB_USERNAME: ${{ secrets.USERNAME }}
+#        with:
+#          arguments: publish
