--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,5 @@ jdk:
   - openjdk17
 install:
   - echo "Running a custom install command"
+  - chmod +x ./gradlew
   - ./gradlew clean core:build version-support:build version-support1_8:build version-support1_12:build version-support1_13:build version-support1_16:build build
