--- a/jitpack.yml
+++ b/jitpack.yml
@@ -13,3 +13,5 @@ install:
   - echo "Doing gradle stuff..."
   - chmod +x ./gradlew
   - ./gradlew clean core:build version-support:build version-support1_8:build version-support1_12:build version-support1_13:build version-support1_16:build build
+  - ./gradlew install
+  - ./gradlew build publishToMavenLocal
