--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,7 @@ subprojects {
     publishing {
         publications {
             maven(MavenPublication) {
-                groupId project.group
-                artifactId project.name
-                version project.version
-                from components.java
+                from(components.java)
             }
         }
     }
