--- a/jitpack.yml
+++ b/jitpack.yml
@@ -16,5 +16,7 @@ install:
   - sdk use java 17.0.4-zulu
   - chmod +x ./gradlew
   - ./gradlew clean core:build version-support:build version-support1_8:build version-support1_12:build version-support1_13:build version-support1_16:build build
-  - ./gradlew install
   - ./gradlew build publishToMavenLocal
+  - echo "Deleting BuildTools file"
+  - rm -rf /home/jitpack/build/spigot
+  - rm -rf /home/jitpack/.m2/repository/org/spigotmc/
