--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,7 @@
 plugins {
     id 'id.luckynetwork.lyrams.lyralibs.java-conventions'
 }
-plugins {
-    id 'maven-publish'
-}
+apply plugin: 'maven-publish'
 
 configurations {
     extraLibs
