--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+group 'id.luckynetwork.lyrams.lyralibs'
+version '1.0.0'
+
 subprojects {
     // yes this is barbaric
     if (it.name == 'version-support' || it.name == 'version-support1_8' || it.name == 'version-support1_12' || it.name == 'version-support1_13' || it.name == 'version-support1_16') {
