--- a/jitpack.yml
+++ b/jitpack.yml
@@ -18,3 +18,10 @@ install:
   - ./gradlew clean core:build version-support:build version-support1_8:build version-support1_12:build version-support1_13:build version-support1_16:build build
   - ./gradlew build publishToMavenLocal
   - echo "Deleting BuildTools file"
+  - rm -rf /home/jitpack/build/spigot
+  - rm -rf /home/jitpack/.m2/repository/org/spigotmc/
+  - rm -rf /home/jitpack/.m2/repository/org/bukkit/
+  - cd /home/jitpack/.m2/repository/id/luckynetwork/lyrams/lyralibs
+  - ls
+  - cd /home/jitpack/.m2/repository/id/luckynetwork/lyrams/lyralibs/core
+  - ls
