--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -24,19 +24,19 @@ dependencies {
     otherProjects project(":version-support1_13")
     otherProjects project(":version-support1_16")
 
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     //mongodb
-    extraLibs 'org.mongodb:mongo-java-driver:3.12.10'
+    extraLibs 'org.mongodb:mongo-java-driver:3.12.11'
     // jedis
     extraLibs 'redis.clients:jedis:3.7.0'
     // gson
-    extraLibs 'com.google.code.gson:gson:2.8.6'
+    extraLibs 'com.google.code.gson:gson:2.9.0'
 
     // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
     // jetbrains annotations
-    compileOnly 'org.jetbrains:annotations:20.1.0'
+    compileOnly 'org.jetbrains:annotations:23.0.0'
     // spigot 1.12
     compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
 
@@ -87,6 +87,10 @@ processResources {
             "name"     : pluginName,
             "number"   : code.toString()
     ]
+}
+
+repositories {
+    mavenCentral()
 }
 
 //publishing {
