--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,21 +10,21 @@ configurations {
 def code = 0
 
 dependencies {
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     //mongodb
-    compileOnly 'org.mongodb:mongo-java-driver:3.12.10'
+    compileOnly 'org.mongodb:mongo-java-driver:3.12.11'
     // jedis
     compileOnly 'redis.clients:jedis:3.7.0'
     // gson
-    compileOnly 'com.google.code.gson:gson:2.8.6'
+    compileOnly 'com.google.code.gson:gson:2.9.0'
     // hikariCP
     compileOnly 'com.zaxxer:HikariCP:5.0.1'
 
     // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
     // jetbrains annotations
-    compileOnly 'org.jetbrains:annotations:20.1.0'
+    compileOnly 'org.jetbrains:annotations:23.0.0'
 
     configurations.compileOnly.extendsFrom(configurations.extraLibs)
 }
@@ -49,6 +49,10 @@ jar {
     from {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+repositories {
+    mavenCentral()
 }
 
 //publishing {
