--- a/version-support/build.gradle
+++ b/version-support/build.gradle
@@ -7,14 +7,14 @@ configurations {
 }
 
 dependencies {
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
     // jetbrains annotations
-    compileOnly 'org.jetbrains:annotations:20.1.0'
+    compileOnly 'org.jetbrains:annotations:23.0.0'
     // spigot 1.12
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly files("../aLibs/spigot/spigot-api-1.12.2-R0.1-SNAPSHOT.jar")
 
     configurations.compileOnly.extendsFrom(configurations.extraLibs)
 }
@@ -27,4 +27,8 @@ jar {
     from {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+repositories {
+    mavenCentral()
 }
