--- a/version-support1_13/build.gradle
+++ b/version-support1_13/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     // jetbrains annotations
     compileOnly 'org.jetbrains:annotations:23.0.0'
     // spigot 1.13
-    compileOnly files("../aLibs/spigot/spigot-api-1.13.2-R0.1-SNAPSHOT.jar")
+    compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT'
 
     configurations.compileOnly.extendsFrom(configurations.extraLibs)
 }
