--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -93,22 +93,8 @@ repositories {
     mavenCentral()
 }
 
-//publishing {
-//    repositories {
-//        maven {
-//            name = "LyraLibs-Core"
-//            url = uri("https://maven.pkg.github.com/BadAccuracyID/LyraLibs")
-//            credentials {
-//                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
-//                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-//            }
-//        }
-//    }
-//    publications {
-//        gpr(MavenPublication) {
-//            from(components.java)
-//        }
-//    }
-//}
+javadoc {
+    source = sourceSets.main.allJava
+}
 
 assemble.dependsOn(jarHeavy)
