--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -70,7 +70,7 @@ task jarHeavy(type: Jar) {
     from sourceSets.main.output
 
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveFileName = "normal/LyraLibs-Bukkit-Light b" + code.toString() + ".jar"
+    archiveFileName = "normal/LyraLibs-Bukkit-shaded b" + code.toString() + ".jar"
 
     from {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
@@ -93,8 +93,10 @@ repositories {
     mavenCentral()
 }
 
-javadoc {
-    source = sourceSets.main.allJava
+task javadocJar(type: Jar) {
+    from javadoc
+    archiveFileName = "LyraLibs-Bukkit b" + code.toString() + "-javadoc.jar"
 }
 
 assemble.dependsOn(jarHeavy)
+assemble.dependsOn(javadocJar)
