MAVEN CENTRAL BABY LETS GOOOOO!

--- a/bukkit/build.gradle
+++ b/bukkit/build.gradle
@@ -59,7 +59,6 @@ task updateBuildNumber {
 
 jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveFileName = "light/LyraLibs-Bukkit b" + code.toString() + ".jar"
 
     from {
         configurations.otherProjects.collect { it.isDirectory() ? it : zipTree(it) }
@@ -70,7 +69,7 @@ task jarHeavy(type: Jar) {
     from sourceSets.main.output
 
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    archiveFileName = "normal/LyraLibs-Bukkit-shaded b" + code.toString() + ".jar"
+    archiveFileName = "shaded/LyraLibs-Bukkit-shaded b" + code.toString() + ".jar"
 
     from {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
@@ -93,10 +92,16 @@ repositories {
     mavenCentral()
 }
 
-task javadocJar(type: Jar) {
-    from javadoc
-    archiveFileName = "LyraLibs-Bukkit b" + code.toString() + "-javadoc.jar"
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier = 'sources'
 }
 
-assemble.dependsOn(jarHeavy)
+task javadocJar(type: Jar) {
+    from javadoc
+    classifier = 'javadoc'
+}
+
+assemble.dependsOn(sourcesJar)
 assemble.dependsOn(javadocJar)
+assemble.dependsOn(jarHeavy)
